[gd_scene load_steps=5 format=3 uid="uid://b01cbmum8wacl"]

[ext_resource type="Script" path="res://scripts/levels/level1.gd" id="1_rqd2h"]
[ext_resource type="PackedScene" uid="uid://bragutgdm43hq" path="res://scenes/visualisation/terrain_manager.tscn" id="2_7seaj"]
[ext_resource type="PackedScene" uid="uid://dm55nq68nldsl" path="res://scenes/menus_screens/pause_menu.tscn" id="3_lejai"]
[ext_resource type="PackedScene" uid="uid://dwu3ihwglguna" path="res://scenes/logic/power_plant.tscn" id="4_vr4jk"]

[node name="Level1" type="Node2D"]
script = ExtResource("1_rqd2h")

[node name="TerrainManager" parent="." instance=ExtResource("2_7seaj")]

[node name="Pause_Scene" parent="." node_paths=PackedStringArray("terrain_manager") instance=ExtResource("3_lejai")]
visible = false
terrain_manager = NodePath("../TerrainManager")

[node name="PowerPlant" parent="." instance=ExtResource("4_vr4jk")]
visible = false
position = Vector2(11, 562)
scale = Vector2(33.72, 33.72)
power_needed = 1000

[node name="ImmovableZones" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="ImmovableZones"]
offset_left = 1472.0
offset_top = 976.0
offset_right = 1545.0
offset_bottom = 996.0
scale = Vector2(6.12, 5.16)
color = Color(1, 0, 0, 0.392157)

[node name="ColorRect2" type="ColorRect" parent="ImmovableZones"]
offset_right = 14.0
offset_bottom = 61.0
scale = Vector2(5.94122, 4.24902)
color = Color(1, 0, 0, 0.392157)
